made a few changes to make sure website is atleast usable on smaller screen devices

--- a/textbookswap/tradeboard/static/tradeboard/css/tb_main.css
+++ b/textbookswap/tradeboard/static/tradeboard/css/tb_main.css
@@ -67,7 +67,7 @@ body {
   align-self: stretch;
 }
 html {
-  overflow-y: hidden;
+  overflow: overlay;
 }
 .panels {
   margin-top: 20px;
